[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/GameUI.gd" type="Script" id=1]
[ext_resource path="res://ui/Editor.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Variables.tscn" type="PackedScene" id=4]

[node name="GameUI" type="Control"]
script = ExtResource( 1 )

[node name="codeEditor" type="Button" parent="."]
margin_right = 85.0
margin_bottom = 20.0
text = "Code Editor"

[node name="Editor" parent="." instance=ExtResource( 3 )]
rect_min_size = Vector2( 314, 152 )

[node name="varList" type="Button" parent="."]
margin_left = 1292.0
margin_right = 175.0
margin_bottom = 20.0
text = "Variables"

[node name="Variables" parent="." instance=ExtResource( 4 )]
margin_left = 1060.0
margin_top = 20.0
margin_right = -6.0
margin_bottom = -268.0

[connection signal="pressed" from="codeEditor" to="." method="_on_codeEditor_pressed"]
[connection signal="pressed" from="varList" to="." method="_on_varList_pressed"]
